--- a/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html
+++ b/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html
@@ -1,15 +1,25 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+<head>
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+   <meta charset="UTF-8">
+   <title>ADEEB'S PORTFOLIO</title>
+</head>
 
-<!-- TODO 4: Add titles/subtitles etc. -->
+<body>
+   <h1>adeeb's Portfolio</h1>
+   <h2>i'm a web developer</h2>
+   <hr>
+   <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+   <img src="./assets/images/movie-ranking.png"/>
+   <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+   <img src="./assets/images/birthday-invite.png"/>
+   <hr>
 
-<!-- TODO 5: Add a link to the project pages -->
+ <a href="./public/about.html">About Me</a>
+ <a href="./public/contact.html">Contact Me</a>
+ </body>
 
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+ </html>
+ 
