--- a/4.3 HTML Porfolio Project/solution.html
+++ b/4.3 HTML Porfolio Project/solution.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Angela's Portfolio</title>
 </head>
 
@@ -10,13 +11,23 @@
   <h1>Angela Yu's Portfolio</h1>
   <h2>I'm a Web Developer</h2>
   <hr />
-  <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-  <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview"/>
-  <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-  <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview"/>
+  
+  <!-- Movie Ranking Project Section -->
+  <h3><a href="public/movie-ranking.html">Movie Ranking Project</a></h3>
+  <img src="assets/images/movie-ranking.png" height="200" alt="Movie Ranking Project Preview" />
+  
+  <!-- Birthday Invite Project Section -->
+  <h3><a href="public/birthday-invite.html">Birthday Invite Project</a></h3>
+  <img src="assets/images/birthday-invite.png" height="200" alt="Birthday Invite Project Preview" />
+  
   <hr />
-  <a href="./public/about.html">About Me</a>
-  <a href="./public/contact.html">Contact Me</a>
+  
+  <!-- Navigation Links -->
+  <nav>
+    <a href="public/about.html">About Me</a>
+    <br />
+    <a href="public/contact.html">Contact Me</a>
+  </nav>
 </body>
 
 </html>
